# tonelab-vst

./: .env.example  .gitignore  AGENT_EVERGREEN_BUILD_VERIFY.md  Cargo.toml  DEPLOY.md  EVERGREEN_SPECS.md  LICENSE  README.md  README_LINUX.txt  README_MACOS.txt  README_WINDOWS.txt  install_mac.command  install_windows.bat
.github/workflows/: release.yml
backend/: .dockerignore  .gcloudignore  Dockerfile  go.mod  main.go
backend/assets/: README.md  effects_manifest.json  engine.wasm  engine.wasm.sig.b64
backend/security/: README.md  dev_ed25519_public_key.b64  sign_bundle.sh
scripts/: backup_all.sh  evergreen_down.sh  evergreen_up.sh
src/: device.rs  evergreen.rs  lib.rs  main.rs
src/dsp/: effects.rs  mod.rs
ui/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
ui/public/: sw.js
ui/src/: App.jsx  index.css  main.jsx
ui/src/components/: ActivationButton.jsx  Card.css  Card.jsx  ConnectionLine.jsx  ContextMenu.jsx  Dashboard.jsx  FlowCardNode.jsx  GroupScaleOverlay.jsx  Icons.jsx  Knob.css  Knob.jsx  SVGDefs.jsx  Toolbar.css  Toolbar.jsx  Tooltip.jsx  UpdateNotice.css  UpdateNotice.jsx  Wire.jsx  WireEdge.jsx
ui/src/config/: effects.js  runtime.js  runtime.test.js
ui/src/hooks/: useBridge.js
ui/src/services/: pluginUpdateApi.js  tonelabApi.js
ui/src/utils/: externalNavigation.js  ipcBridge.js  layout.js  serializer.js
wasm-engine-rust/: Cargo.toml  README.md
wasm-engine-rust/src/: lib.rs
wasm-engine-rust/src/dsp_core/: effects.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
